# mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build-image.yml
jumpserver_mcp_server/: __main__.py  config.py  server.py  setup.py
